# generic-chatbot-framework

./: .eslintrc.js  .gitignore  CHANGELOG.md  Config  NOTICE.txt  README.md  cdk.context.json  cdk.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test-deployment.sh  tsconfig.json
backend/conversation/conversation_store/: __init__.py  base.py  utils.py
backend/conversation/routes/: feedback_routes.py  internal_routes.py  types.py  utils.py
backend/corpus/: lambda.py
backend/corpus/routes/: semantic_search.py
backend/inference/: lambda.py
backend/inference/common/: app_trace.py  types.py  utils.py  websocket_utils.py
deployment/: Dockerfile  credentials.env  deploy.sh  deployment.sh  docker_amazon_linux_2023.sh  ingestion.sh  resources.sh
docs/: S3_VECTORS_INTEGRATION.md
frontend/: .eslintrc.json  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json
frontend/src/: App.tsx  Auth.tsx  config.json  index.tsx  reportWebVitals.ts  setupTests.ts
infra/: .eslintignore  .prettierrc  package-lock.json  package.json  tsconfig.json
infra/test/: handoff_config.test.ts  test_config_defaults.yaml
quickstart/bedrock/: config.yaml
reports/: bandit.txt  gitsecrets.txt  licence-check.txt  npm-audit.txt  python-licenses.txt  semgrep.txt
reports/cdknag/: AwsSolutions-FrancisChatbotStack-dev-NagReport.csv
scripts/: check-bedrock-models.sh  invoke_api.ts  invoke_handoff.ts  predestroy.py  security-check.sh
test/: config.test.ts  handoff_config.test.ts  infra.test.ts  test_config_defaults.yaml  test_config_missing_model.yaml  test_config_no_handoff.yaml  test_config_no_summarizer.yaml  test_config_summarizer.yaml
tools/: get_handbook_urls.py  pdf_to_bucket.py  urls.txt
types/: cdk-nag.d.ts
(+197 files in other folders)
